3264: Changes in schedule visit popups (#10)
* 3264: Changes in schedule visit popups

* AGRE-3264: Changes after code review
