# api/src/main/java/org/openmrs/module/visits/api/dto/LocationAttributeDTO.java
@@ -1,0 +1,41 @@
+/*
+ * This Source Code Form is subject to the terms of the Mozilla Public License,
+ * v. 2.0. If a copy of the MPL was not distributed with this file, You can
+ * obtain one at http://mozilla.org/MPL/2.0/. OpenMRS is also distributed under
+ * the terms of the Healthcare Disclaimer located at http://openmrs.org/license.
+ * <p>
+ * Copyright (C) OpenMRS Inc. OpenMRS is a registered trademark and the OpenMRS
+ * graphic logo is a trademark of OpenMRS Inc.
+ */
+
+package org.openmrs.module.visits.api.dto;
+
+import java.util.Map;
+
+public class LocationAttributeDTO {
+
+  private String locationUuid;
+
+  private Map<String, String> locationAttributesMap;
+
+  public LocationAttributeDTO(String locationUuid, Map<String, String> locationAttributesMap) {
+    this.locationUuid = locationUuid;
+    this.locationAttributesMap = locationAttributesMap;
+  }
+
+  public String getLocationUuid() {
+    return locationUuid;
+  }
+
+  public void setLocationUuid(String locationUuid) {
+    this.locationUuid = locationUuid;
+  }
+
+  public Map<String, String> getLocationAttributesMap() {
+    return locationAttributesMap;
+  }
+
+  public void setLocationAttributesMap(Map<String, String> locationAttributesMap) {
+    this.locationAttributesMap = locationAttributesMap;
+  }
+}
